--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,7 @@
-/**
-* Template Name: Groovin - v4.5.0
-* Template URL: https://bootstrapmade.com/groovin-free-bootstrap-theme/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
-
 body {
     font-family: "Open Sans", sans-serif;
     color: #444444;
+    background-color: #f1f1f1ef;
 }
 
 a {
